src/objects/QPMS__Change_Product__c.object
<CustomObject>
    <description>junction for product task,junction between product and general task</description>
    <fields>
        <fullName>QPMS__Change_Request__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to general/product task</description>
        <label>General Task</label>
        <referenceTo>QPMS__General_Task__c</referenceTo>
        <relationshipLabel>Change Products</relationshipLabel>
        <relationshipName>Change_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <formula>if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Open&apos;,$Label.qpms__quick_search_audit_status_open,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Closed&apos;,$Label.qpms__closed,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;In Review&apos;,$Label.qpms__sqm_in_review,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Pending Approval&apos;,$Label.qpms__pending_approval,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Void&apos;,$Label.qpms__lt_all_void,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Change Workflow&apos;,$Label.qpms__change_workflow,
if(TEXT(QPMS__General_Task__r.QPMS__Change_Management__r.QPMS__Status__c) == &apos;Change Workflow&apos;,$Label.qpms__pending_review,$Label.qpms__document_change_order)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Change Product</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Change Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>